--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.0.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "tailwindcss": "^0.7.2",
@@ -18,9 +19,11 @@
     "webpack-merge": "^4.1.5"
   },
   "dependencies": {
+    "vee-validate": "^2.1.4",
     "vue": "^2.5.20",
     "vue-i18n": "^8.4.0",
     "vue-router": "^3.0.2",
+    "vue2-animate": "^2.1.0",
     "vuex": "^3.0.1"
   },
   "scripts": {
