gitignore updated + wip auth

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-DB_NAME=my_db
-DB_USER=my_db_user
-DB_PASS=my_db_pass
+# Database connection
+DB_NAME=pyscrapper
+DB_USER=postgres
+DB_PASS=postgres
+DB_HOST=127.0.0.1
+DB_PORT=5432
+
+# Common
+APP_NAME=PyScrapper
