--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "devDependencies": {
     "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-transform-destructuring": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "autoprefixer": "^9.4.2",
     "babel-loader": "^8.0.4",
@@ -19,6 +22,7 @@
     "webpack-merge": "^4.1.5"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vee-validate": "^2.1.4",
     "vue": "^2.5.20",
     "vue-i18n": "^8.4.0",
