--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
     "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-destructuring": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "autoprefixer": "^9.4.2",
     "babel-loader": "^8.0.4",
+    "bundle-loader": "^0.5.6",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.0.0",
+    "error-overlay-webpack-plugin": "^0.1.5",
     "mini-css-extract-plugin": "^0.5.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "raw-loader": "^1.0.0",
     "style-loader": "^0.23.1",
     "tailwindcss": "^0.7.2",
     "vue-loader": "^15.4.2",
@@ -23,8 +27,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "es6-promise": "^4.2.5",
+    "feather-icons": "^4.9.0",
     "vee-validate": "^2.1.4",
     "vue": "^2.5.20",
+    "vue-clickaway": "^2.2.2",
+    "vue-feather-icon": "^1.2.0",
     "vue-i18n": "^8.4.0",
     "vue-router": "^3.0.2",
     "vue2-animate": "^2.1.0",
