--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "css-loader": "^2.0.0",
     "error-overlay-webpack-plugin": "^0.1.5",
     "mini-css-extract-plugin": "^0.5.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^1.0.0",
     "style-loader": "^0.23.1",
     "tailwindcss": "^0.7.2",
+    "terser-webpack-plugin": "^1.1.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.20",
     "webpack": "^4.27.1",
@@ -26,9 +29,15 @@
     "webpack-merge": "^4.1.5"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.9",
+    "@fortawesome/free-solid-svg-icons": "^5.6.0",
+    "@fortawesome/vue-fontawesome": "^0.1.3",
+    "add": "^2.0.6",
     "axios": "^0.18.0",
     "es6-promise": "^4.2.5",
     "feather-icons": "^4.9.0",
+    "glob-all": "^3.1.0",
+    "purgecss-webpack-plugin": "^1.4.0",
     "vee-validate": "^2.1.4",
     "vue": "^2.5.20",
     "vue-clickaway": "^2.2.2",
@@ -36,7 +45,8 @@
     "vue-i18n": "^8.4.0",
     "vue-router": "^3.0.2",
     "vue2-animate": "^2.1.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "yarn": "^1.12.3"
   },
   "scripts": {
     "dev": "webpack --config build/webpack.dev.js --watch --run-dev --progress",
