--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack": "^4.27.1",
     "webpack-bundle-tracker": "^0.4.2-beta",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.5"
   },
   "dependencies": {
