--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.0.0",
     "error-overlay-webpack-plugin": "^0.1.5",
+    "file-loader": "^2.0.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "node-notifier": "^5.3.0",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^1.0.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "tailwindcss": "^0.7.2",
     "terser-webpack-plugin": "^1.1.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^1.1.2",
     "vue-loader": "^15.4.2",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.20",
     "webpack": "^4.27.1",
     "webpack-bundle-tracker": "^0.4.2-beta",
