--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.9",
+    "@fortawesome/free-brands-svg-icons": "^5.6.1",
     "@fortawesome/free-solid-svg-icons": "^5.6.0",
     "@fortawesome/vue-fontawesome": "^0.1.3",
     "add": "^2.0.6",
