--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bundle-loader": "^0.5.6",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.0.0",
+    "cypress": "^3.1.3",
     "error-overlay-webpack-plugin": "^0.1.5",
     "file-loader": "^2.0.0",
     "mini-css-extract-plugin": "^0.5.0",
@@ -45,6 +46,7 @@
     "es6-promise": "^4.2.5",
     "feather-icons": "^4.9.0",
     "glob-all": "^3.1.0",
+    "prismjs": "^1.15.0",
     "purgecss-webpack-plugin": "^1.4.0",
     "vee-validate": "^2.1.4",
     "vue": "^2.5.20",
