--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "vue-clickaway": "^2.2.2",
     "vue-feather-icon": "^1.2.0",
     "vue-i18n": "^8.4.0",
+    "vue-prism-component": "^1.1.1",
     "vue-router": "^3.0.2",
     "vue2-animate": "^2.1.0",
     "vuex": "^3.0.1",
