cleanup + user custom model + fresh db + auth wit JWT

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,16 +13,18 @@ django-rest-auth==0.9.3
 django-webpack-loader==0.6.0
 djangorestframework==3.9.0
 djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==3.3
+docutils==0.14
 ecdsa==0.13
 future==0.17.1
 html5lib==1.0.1
 idna==2.7
 Markdown==3.0.1
 oauthlib==2.1.0
+Pillow==5.3.0
 psycopg2==2.7.6.1
 pyasn1==0.4.4
 pycparser==2.19
-Pygments==2.3.0
 PyJWT==1.7.1
 python-dotenv==0.10.0
 python-jose==3.0.1
