--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Markdown==3.0.1
 oauthlib==2.1.0
 Pillow==5.3.0
 psycopg2==2.7.6.1
+psycopg2-binary==2.7.6.1
 pyasn1==0.4.4
 pycparser==2.19
 PyJWT==1.7.1
