--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.0",
     "@fortawesome/vue-fontawesome": "^0.1.3",
     "add": "^2.0.6",
+    "ant-design-vue": "^1.2.1",
     "axios": "^0.18.0",
     "es6-promise": "^4.2.5",
     "feather-icons": "^4.9.0",
